# JARVIS-X-A-Personal-AI-Operating-System

./: .env  .env.example  .gitignore  README.md  TODO.md  UPGRADE_COMPLETE.md  advanced_nlp.py  config.py  enhanced_memory.py  face_login.py  hud.py  intent.py  intent_detector.py  jarvis.py  jarvis_upgraded.py  main.py  memory.py  pyproject.toml  requirements.txt  requirements_upgraded.txt  setup.bat  setup.py  speech.py  system_automation.py  tts.py  voice_login.py
core/: agent_mode.py  api_manager.py  assistant.py  config.py  gemini_llm.py  google_generativeai_stub.pyi  intent_classifier.py  life_automation.py  life_os.py  llm.py  personality.py  safety.py  self_coder.py  self_improver.py  skill_learner.py  skill_manager.py  skill_router.py  speech_to_text.py  text_to_speech.py  wake_word.py  wake_word_detector.py
skills/: email_sender.py  entertainment.py  information.py  music.py  pc_control.py  productivity.py  small_talk.py  smart_home.py  system_control.py  timer_alarm.py  web_search.py
utils/: file_indexer.py  goals.py  memory.py  persistent_memory.py  routines.py
