[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-ai"
version = "2.0.0"
authors = [
  { name="Sulekh", email="sulekh1403@gmail.com" },
]
description = "A sophisticated, voice-controlled personal assistant built with Python."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "google-generativeai",
    "pyjokes",
    "requests",
    "speechrecognition",
    "sounddevice",
    "numpy",
    "edge-tts",
    "playsound",
    "whisper",
    "psutil",
    "pyautogui",
    "pycaw",
    "pyttsx3",
    "gtts",
    "pygame",
    "PyQt5",
    "tinydb",
    "python-dotenv"
]

[project.urls]
"Homepage" = "https://github.com/sulekh14/jarvis"
"Bug Tracker" = "https://github.com/sulekh14/jarvis/issues"

[project.scripts]
jarvis = "jarvis:main"
